# sideRepo

cpp/: Makefile
cpp/address_book/: address-book.cc  address-book.hh  contact-details.cc  contact-details.hh  main.cc
cpp/bimap/: bimap.hxx
cpp/cartesian_vector/: a.out  vector.cc
cpp/chain_of_responsibility/: director.cc  handler.cc  president.cc  vice-president.cc
cpp/closer_to/: a.out  closer-to.cc
cpp/cmake/: CMakeLists.txt
cpp/cmake/cipeek/: CMakeLists.txt
cpp/cmake/src/: ciutils.cc
cpp/const/: Makefile  person.cc  person.hh
cpp/constexpr_factorial/: constexpr-factorial.hh
cpp/directories_infos/: Makefile  file.in  read-info.cc  read-info.hh
cpp/engine/: Makefile  engine.cc  engine.hh  main.cc  motor-cycle.cc  motor-cycle.hh  motor-truck.cc  motor-truck.hh  vehicle.cc  vehicle.hh
cpp/equal_pairs/: a.out  pair.hh
cpp/exception/: Makefile  game.cc  invalid-argument.cc  player.cc
cpp/exist_functor/: exist.hh  exist.hxx
cpp/find_optional/: find-optional.cc
cpp/for_each/: a.out  for-each.hh
cpp/forward_multiplication/: forward-multiplication.cc
cpp/hello_world/: Makefile
zork/libzork/: CMakeLists.txt  main.cc
zork/libzork/include/: CMakeLists.txt
zork/libzork/include/libzork/store/: store.hh
zork/libzork/include/libzork/story/: choice.hh  node.hh  story.hh
zork/libzork/src/: CMakeLists.txt
zork/libzork/src/libzork/store/: CMakeLists.txt  store.cc
zork/libzork/src/libzork/story/: CMakeLists.txt  choice.cc  node.cc  story.cc
zork/libzork/tests/: CMakeLists.txt
zork/libzork/zorkxplorer/src/: CMakeLists.txt
(+26 files in other folders)
